applications/prd/we-admin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: we-admin-prd
  labels:
    app: we-admin
    environment: production
