applications/prd/we-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: we-admin
  namespace: we-admin-prd
  labels:
    app: we-admin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: we-admin
